--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,10 @@
 <%= form_for(@post) do |f| %>
+  <br>
   <label>Post title:</label><br>
-  <%= f.text_field :title %><br>
-
+  <%= f.hidden_field :author_id %>
+  <%= f.text_field :title %><br><br>
+  <%= author_id_field(@post) %><br><br>
   <label>Post Description</label><br>
   <%= f.text_area :description %><br>
-
   <%= f.submit %>
 <% end %>
